implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/fail_if_passed_param_is_wrong_type_using_use_statement.stderr
error: Expected `ockam::Context` found `String`
 --> tests/node_test/fail_if_passed_param_is_wrong_type_using_use_statement.rs:6:23
  |
6 | async fn my_test(ctx: String) -> ockam::Result<()> {}
  |                       ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node_test/fail_if_passed_param_is_wrong_type_using_use_statement.rs:5:1
  |
5 | / #[ockam_node_test_attribute::node_test]
6 | | async fn my_test(ctx: String) -> ockam::Result<()> {}
  | |_____________________________________________________^ consider adding a `main` function to `$DIR/tests/node_test/fail_if_passed_param_is_wrong_type_using_use_statement.rs`
